--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,7 @@ imagemagick (8:6.7.9.3-1) UNRELEASED; urgency=low
   * Depend on libfftw3
   * Suggest graphviz 
   * Drop build depend on graphicsmagick's convert. Use builded imagemagick
+  * Use internal svg engine instead of rsvg one
 
  -- Bastien Roucariès <roucaries.bastien+debian@gmail.com>  Mon, 09 Jul 2012 17:50:17 +0200
 
