--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+imagemagick (8:6.7.9.3-1) UNRELEASED; urgency=low
+
+  * New upstream version
+  * Improve download and commit script
+  * Depend on libfftw3
+  * Suggest graphviz 
+
+ -- Bastien Roucariès <roucaries.bastien+debian@gmail.com>  Mon, 09 Jul 2012 17:50:17 +0200
+
 imagemagick (8:6.7.7.10-4) unstable; urgency=high
 
   * Security Bug fix: "Fails an assertion due to OpenMP related problem",
