--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-imagemagick (8:6.7.9.3-1) UNRELEASED; urgency=low
+imagemagick (8:6.7.9.3-1) experimental; urgency=low
 
   * New upstream version.
   * Improve download and commit script.
@@ -10,8 +10,9 @@ imagemagick (8:6.7.9.3-1) UNRELEASED; urgency=low
     Use builded imagemagick one.
   * Use internal svg engine instead of rsvg one.
   * Improve icons aspect particularly for small size.
+  * Add guidance for bug submitting.
 
- -- Bastien Roucariès <roucaries.bastien+debian@gmail.com>  Mon, 09 Jul 2012 17:50:17 +0200
+ -- Bastien Roucariès <roucaries.bastien+debian@gmail.com>  Mon, 03 Sep 2012 11:59:37 +0200
 
 imagemagick (8:6.7.7.10-4) unstable; urgency=high
 
