--- a/debian/changelog
+++ b/debian/changelog
@@ -10,7 +10,9 @@ imagemagick (8:6.7.9.3-1) experimental; urgency=low
     Use builded imagemagick one.
   * Use internal svg engine instead of rsvg one.
   * Improve icons aspect particularly for small size.
-  * Add guidance for bug submitting.
+  * Add guidance for bug submitting (thanks to Jonathan Nieder and
+    Justin B Rye)
+  * Suggests some debugging help for imagemagick-dbg
 
  -- Bastien Roucariès <roucaries.bastien+debian@gmail.com>  Mon, 03 Sep 2012 11:59:37 +0200
 
