--- a/debian/changelog
+++ b/debian/changelog
@@ -13,6 +13,7 @@ imagemagick (8:6.7.9.3-1) experimental; urgency=low
   * Add guidance for bug submitting (thanks to Jonathan Nieder and
     Justin B Rye)
   * Suggests some debugging help for imagemagick-dbg
+  * add symbols file
 
  -- Bastien Roucariès <roucaries.bastien+debian@gmail.com>  Mon, 03 Sep 2012 11:59:37 +0200
 
