--- a/debian/changelog
+++ b/debian/changelog
@@ -13,7 +13,8 @@ imagemagick (8:6.7.9.3-1) experimental; urgency=low
   * Add guidance for bug submitting (thanks to Jonathan Nieder and
     Justin B Rye)
   * Suggests some debugging help for imagemagick-dbg
-  * add symbols file
+  * Add symbols file
+  * Do not mess up MAKEFLAGS
 
  -- Bastien Roucariès <roucaries.bastien+debian@gmail.com>  Mon, 03 Sep 2012 11:59:37 +0200
 
