--- a/debian/changelog
+++ b/debian/changelog
@@ -16,6 +16,8 @@ imagemagick (8:6.7.9.3-1) experimental; urgency=low
   * Add symbols file.
   * Do not mess up MAKEFLAGS.
   * Fail to build in case of testcase failure.
+  * autoreconf package in order to avoid linking with depends lib 
+    (use debian patched libtool).
 
  -- Bastien Roucariès <roucaries.bastien+debian@gmail.com>  Mon, 03 Sep 2012 11:59:37 +0200
 
