--- a/debian/changelog
+++ b/debian/changelog
@@ -17,7 +17,8 @@ imagemagick (8:6.7.9.3-1) experimental; urgency=low
   * Do not mess up MAKEFLAGS.
   * Fail to build in case of testcase failure.
   * autoreconf package in order to avoid linking with depends lib 
-    (use debian patched libtool).
+    (use debian patched libtool). Patch magick++ demo by adding 
+    required libs.
 
  -- Bastien Roucariès <roucaries.bastien+debian@gmail.com>  Mon, 03 Sep 2012 11:59:37 +0200
 
