--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+imagemagick (8:6.7.9.3-2) experimental; urgency=low
+
+  * Fix symbols files.
+
+ -- Bastien Roucariès <roucaries.bastien+debian@gmail.com>  Mon, 10 Sep 2012 14:23:32 +0200
+
 imagemagick (8:6.7.9.3-1) experimental; urgency=low
 
   * New upstream version.
