--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2012-11-28  6.8.0-8 Cristy  <quetzlzacatenango@image...>
+  * Allow temporary-path policy to override temporary path environment
+    variables (e.g. MAGICK_TMPDIR).
+
 2012-11-26  6.8.0-7 Cristy  <quetzlzacatenango@image...>
   * New version 6.8.0-7, SVN revision 10029.
 
