--- a/ChangeLog
+++ b/ChangeLog
@@ -8,6 +8,8 @@
     variables (e.g. MAGICK_TMPDIR).
   * Implement symbol versioning (reference
     http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=22352).
+  * The stream utility no longer returns a black image (reference
+    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=22046).
 
 2012-11-26  6.8.0-7 Cristy  <quetzlzacatenango@image...>
   * New version 6.8.0-7, SVN revision 10029.
