--- a/ChangeLog
+++ b/ChangeLog
@@ -8,6 +8,9 @@
     variables (e.g. MAGICK_TMPDIR).
   * Implement symbol versioning (reference
     http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=22352).
+  * ABI is incompatible if quantum depth change. Add abi indication to library
+    name, thanks to Bastien Roucaries (reference
+    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=22352).
   * The stream utility no longer returns a black image (reference
     http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=22046).
 
