--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2012-12-09  6.8.0-9 Cristy  <quetzlzacatenango@image...>
+  * Further support for associating quantum depth with ABI (reference
+    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=22352).
+
 2012-12-07  6.8.0-8 Cristy  <quetzlzacatenango@image...>
   * New version 6.8.0-8, SVN revision 10118.
 
