--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2012-12-10  6.8.0-9 Glenn Randers-Pehrson <glennrp@image...>
+  * Prepended "Acquire" and "Relinquish" to debugging log messages in
+    magick/resource.c that only showed the filename.
+
 2012-12-09  6.8.0-9 Cristy  <quetzlzacatenango@image...>
   * Further support for associating quantum depth with ABI (reference
     http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=22352).
