--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2012-12-13  6.8.0-9 Cristy  <quetzlzacatenango@image...>
+  * New version 6.8.0-9, SVN revision 10176.
+
 2012-12-10  6.8.0-9 Glenn Randers-Pehrson <glennrp@image...>
   * Prepended "Acquire" and "Relinquish" to debugging log messages in
     magick/resource.c that only showed the filename.
