--- a/ChangeLog
+++ b/ChangeLog
@@ -4,8 +4,9 @@
 2012-12-13  6.8.0-10 Anthony Thyssen <A.Thyssen@griffith...>
   * Minor tweeks and commenting of Virtual Pixel shortcuts in
     resampling filters.
-  * Added define "shepards-power" to control the power setting (def=2)
+  * Added -define "shepards:power" to control the power setting (def=2)
     for Shepards Method in -distort and  -sparse-color
+    http://www.imagemagick.org/discourse-server/viewtopic.php?t=22416
 
 2012-12-13  6.8.0-9 Cristy  <quetzlzacatenango@image...>
   * New version 6.8.0-9, SVN revision 10182.
