--- a/ChangeLog
+++ b/ChangeLog
@@ -284,6 +284,8 @@ http://www.imagemagick.org/discourse-server/viewtopic.php?f=2&t=21884).
     http://www.imagemagick.org/discourse-server/viewtopic.php?f=2&t=21663).
   * Utilize inkscape if it is in your execution path otherwise RSVG.  If
     neither is available, revert to the internal SVG renderer.
+  * Initialize image->x_resolution and y_resolution to 0 in image.c
+    (previously they were initialized to DefaultResolution, which is 72.0).
 
 2012-08-12  6.7.8-10 Cristy  <quetzlzacatenango@image...>
   * New version 6.7.8-10, SVN revision 8915.
