--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,7 @@
 2012-12-23  6.8.1-1 Cristy  <quetzlzacatenango@image...>
+  * New version 6.8.1-1, SVN revision 10350.
+
+2012-12-23  6.8.1-1 Cristy  <quetzlzacatenango@image...>
   * More large image performance tuning.
 
 2012-12-20  6.8.1-0 Cristy  <quetzlzacatenango@image...>
