--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2012-12-24  6.8.1-2 Cristy  <quetzlzacatenango@image...>
+  * New version 6.8.1-2, SVN revision 10356.
+
 2012-12-23  6.8.1-2 Cristy  <quetzlzacatenango@image...>
   * Magickcore headers recently used pow() in the inline functions inside
     public headers.  Thus is order to avoid library depends problem, put -lm
