--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2012-12-29  6.8.1-4 Cristy  <quetzlzacatenango@image...>
+  * New version 6.8.1-4, SVN revision 10420.
+
 2012-12-28  6.8.1-4 Cristy  <quetzlzacatenango@image...>
   * Support scientific notation for the -evaluate log option (reference
     http://www.imagemagick.org/discourse-server/viewtopic.php?f=2&t=22496).
