--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2012-12-30  6.8.1-5 Cristy  <quetzlzacatenango@image...>
+  * New version 6.8.1-5, SVN revision 10428.
+
+2012-12-29  6.8.1-4 Cristy  <quetzlzacatenango@image...>
+  * Correction to scientific notation for the -evaluate log option (reference
+    http://www.imagemagick.org/discourse-server/viewtopic.php?f=2&t=22496).
+
 2012-12-29  6.8.1-4 Cristy  <quetzlzacatenango@image...>
   * New version 6.8.1-4, SVN revision 10420.
 
