--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,7 @@
 2012-12-30  6.8.1-5 Cristy  <quetzlzacatenango@image...>
   * New version 6.8.1-5, SVN revision 10428.
 
-2012-12-29  6.8.1-4 Cristy  <quetzlzacatenango@image...>
+2012-12-29  6.8.1-5 Cristy  <quetzlzacatenango@image...>
   * Correction to scientific notation for the -evaluate log option (reference
     http://www.imagemagick.org/discourse-server/viewtopic.php?f=2&t=22496).
 
@@ -23,7 +23,7 @@
 
 2012-12-23  6.8.1-2 Cristy  <quetzlzacatenango@image...>
   * Magickcore headers recently used pow() in the inline functions inside
-    public headers.  Thus is order to avoid library depends problem, put -lm
+    public headers.  Thus in order to avoid library depends problem, put -lm
     in library depends (reference
     http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=22483).
   * Negative exponentiation bug fix (reference
