--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2013-01-01  6.8.1-7 Cristy  <quetzlzacatenango@image...>
+  * magick-baseconfig.h is architecture dependant;
+    make headers quantum depth neutral ( reference
+    http://www.imagemagick.org/discourse-server/viewtopic.php?f=2&t=22509).
+
 2013-01-01  6.8.1-6 Cristy  <quetzlzacatenango@image...>
   * New version 6.8.1-6, SVN revision 10461.
 
