--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2013-01-06  6.8.1-8 Cristy  <quetzlzacatenango@image...>
+  * New version 6.8.1-8, SVN revision 10518.
+
 2013-01-06  6.8.1-9 Cristy  <quetzlzacatenango@image...>
   * Type correction in blob code.
 
