--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,8 @@
 2013-01-06  6.8.1-10 Glenn Randers-Pehrson <glennrp@image...>
   * Fixed LBR (left-bit-replication) macro in coders/png.c; problem reported
     by the clang compiler.
+  * Chromaticity values were written in the wrong order in the cHRM chunk
+    when it accompanied the sRGB chunk.
 
 2013-01-06  6.8.1-9 Cristy  <quetzlzacatenango@image...>
   * New version 6.8.1-9, SVN revision 10518.
