--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2013-01-18  6.8.1-10 Cristy  <quetzlzacatenango@image...>
+  * New version 6.8.1-10, SVN revision 10667.
+
 2013-01-08  6.8.1-10 Cristy  <quetzlzacatenango@image...>
   * Add the same noise value to each channel of a grayscale image (+noise).
   * Fix recursive descent within XGetWindowImage() (reference
