--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,9 @@
 2013-01-21  6.8.2-0 Glenn Randers-Pehrson <glennrp@image...>
   * Impose a 65k limit on the number of text chunks that will be read.
 
+2013-01-21  6.8.2-0 Cristy  <quetzlzacatenango@image...>
+  * Avoid a rare thread lock for timeout event (e.g. MAGICK_TIME_LIMIT=30).
+
 2013-01-18  6.8.1-10 Cristy  <quetzlzacatenango@image...>
   * New version 6.8.1-10, SVN revision 10667.
 
