--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,7 @@
   * Avoid a rare thread lock for timeout event (e.g. MAGICK_TIME_LIMIT=30).
   * Account for signed values for the FITS image format.
   * Support a distributed pixel cache.
+  * Fix numerical stability problem for convolution.
 
 2013-01-18  6.8.1-10 Cristy  <quetzlzacatenango@image...>
   * New version 6.8.1-10, SVN revision 10667.
