--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2013-01-29  6.8.2-1 Cristy  <quetzlzacatenango@image...>
+  * New version 6.8.2-1, SVN revision 10849.
+
+2013-01-28  6.8.2-1 Cristy  <quetzlzacatenango@image...>
+  * Fix 'format not a string literal' problem (reference
+    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=22656).
+
 2013-01-28  6.8.2-0 Cristy  <quetzlzacatenango@image...>
   * New version 6.8.2-0, SVN revision 10831.
 
