--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2013-01-30  6.8.2-2 Cristy  <quetzlzacatenango@image...>
+  * Properly initialize new throttle resource limit.
+
 2013-01-29  6.8.2-1 Cristy  <quetzlzacatenango@image...>
   * New version 6.8.2-1, SVN revision 10859.
 
