--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2013-02-05  6.8.2-5 Cristy  <quetzlzacatenango@image...>
+  * FITS now properly renders the 16 bit signed integer format.
+
 2013-02-04  6.8.2-4 Cristy  <quetzlzacatenango@image...>
   * New version 6.8.2-4, SVN revision 10909.
 
