--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 2013-02-07  6.8.2-6 Cristy  <quetzlzacatenango@image...>
   * Don't destroy an image that's already destroyed (reference
     http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=22747).
+  * Montage is now invarient to the font when no label image label exists.
 
 2013-02-06  6.8.2-5 Cristy  <quetzlzacatenango@image...>
   * New version 6.8.2-5, SVN revision 10952.
