--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2013-02-08  6.8.2-7 Cristy  <quetzlzacatenango@image...>
+  * Ensure MagickCore compiles with a C++ compiler.
+
 2013-02-07  6.8.2-6 Cristy  <quetzlzacatenango@image...>
   * New version 6.8.2-6, SVN revision 10961.
 
