--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2013-02-09  6.8.2-8 Cristy  <quetzlzacatenango@image...>
+  * MagickStatisticImage() method missing from MagickWand.
+
 2013-02-08  6.8.2-7 Cristy  <quetzlzacatenango@image...>
   * New version 6.8.2-7, SVN revision 10965.
 
