--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2013-02-09  6.8.3-0 Bastien Roucaries  <roucaries.basti...>
+  * Allow PerlMagick to be multi-quantum (e.g. Image::Magick::Q16).
+
 2013-02-11  6.8.2-10 Cristy  <quetzlzacatenango@image...>
   * New version 6.8.2-10, SVN revision 11004.
 
