--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2013-02-15  6.8.3-0 Cristy  <quetzlzacatenango@image...>
+  * New version 6.8.3-0, SVN revision 11045.
+
 2013-02-14  6.8.3-0 Cristy  <quetzlzacatenango@image...>
    * Webp requires alpha, not opacity (reference
      http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=22793).
